# Suttu

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: suttu.py
src/Exceptions/: InvalidArgumentException.py
src/app/: app.py
src/parsers/: helper.py
src/parsers/data/: ContentLengthDataParser.py  HttpDataParser.py  HttpRequestDataParser.py  TransferEncodingDataParser.py
src/parsers/headers/: HttpRequestHeaderParser.py  __init__.py
src/request/: HttpRequest.py
src/response/: HttpResponse.py
src/suttu/: __init__.py  globals.py  main.py  suttu.py
src/suttu/Exceptions/: __init__.py
src/suttu/app/: app.py
src/suttu/common/: __init__.py  constants.py
src/suttu/parsers/: __init__.py
src/suttu/parsers/data/: ContentLengthDataParser.py  HttpRequestDataParser.py  TransferEncodingDataParser.py  __init__.py
src/suttu/parsers/headers/: RequestHeaderParser.py  __init__.py
src/suttu/request/: HttpRequest.py  __init__.py
src/suttu/response/: __init__.py
tests/: client.py  sample.py  test_sample.py
