[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Suttu"
version = "0.0.1"
authors = [
  { name="sabareeshk", email="sabareeshk1991@gmail.com" },
]
description = "A toy framework for web application inspired by Flask"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/sabareeshkk/Suttu"
Issues = "https://github.com/sabareeshkk/Suttu/issues"